create footer & delete header

--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,37 @@
     box-sizing: border-box;
 }
 
-header {
-    background-color: #fff;
+ul {
+    list-style-type: none;
+}
+
+.footer {
+    background-color: #2a178a;
+    padding: 50px 0;
+
+    background-image: url("../bg.jpg");
+    background-repeat: no-repeat;
+    background-position: center;
+}
+
+.footer_logo {
+    margin: 20px 0px 50px 50px;
+}
+
+.footer__list {
+    margin: 20px 0 0 50px;
+
+}
+
+.footer__item_title {
+    font-size: 20px;
+    margin-bottom: 20px;
+    color: aqua;
+}
+
+.footer__item {
+    font-size: 20px;
+    margin-bottom: 30px;
+    
+    color: #34e578;
 }
